--- a/views/templates/layout.hbs
+++ b/views/templates/layout.hbs
@@ -10,6 +10,12 @@
 
 <body>
     {{{body}}}
+
+
+    {{!-- reload files just for development  --}}
+    {{#if env}}
+    <script src="/reload/reload.js"></script>
+    {{/if}}
 </body>
 
 </html>
