--- a/public/css/main.css
+++ b/public/css/main.css
@@ -1,15 +1,22 @@
-@import url("https://fonts.googleapis.com/css?family=Ubuntu|Roboto+Slab&display=swap");
-
+@import url("https://fonts.googleapis.com/css?family=Roboto+Slab:300,400|Ubuntu:300,300i,400,500,700&display=swap");
 *,
-:before,
-:after {
+*::before,
+*::after {
   box-sizing: border-box;
 }
+
 html,
 body {
-  width: 100%;
   height: 100%;
+  width: 100%;
 }
+
+a,
+a:hover {
+  text-decoration: none;
+  color: inherit;
+}
+
 body {
   width: 100%;
   height: 100%;
@@ -17,6 +24,7 @@ body {
   display: flex;
   flex-direction: column;
   justify-content: space-between;
+  font-size: 10px;
 }
 ul,
 li {
@@ -37,13 +45,6 @@ nav.navbar .nav-item .nav-link {
   font-size: 15px;
 }
 
-.row {
-  background: #bc4e9c;
-  background: -webkit-linear-gradient(to right bottom, #ec5c83, #cc2e78);
-  background: linear-gradient(to right bottom, #ec5c83, #cc2e78);
-  box-shadow: 0 2px 6px #dd467e;
-}
-
 .footer {
   width: 100%;
 }
@@ -62,6 +63,10 @@ nav.navbar .nav-item .nav-link {
 
 .footer .logo {
   width: 200px;
+}
+
+.footer .footer-item a {
+  font-size: 1.1rem;
 }
 
 a.h-a {
