fix home page and add donate page to hbs

--- a/views/templates/home.hbs
+++ b/views/templates/home.hbs
@@ -41,7 +41,7 @@
                             <p class="last-item__text">
                                 Why the Gap ?
                             </p>
-                            <a href="/resgitration" class="btn join-us">Join with us</a>
+                            <a href="/auth/vol/resgitration" class="btn join-us">Join with us</a>
                         </div>
                     </div>
                 </div>
@@ -70,7 +70,7 @@
             <a href="/donate" class="btn donate-btn">Help</a>
         </div>
         <div class="col-md-6">
-            <img src="./images/children.svg" class="img-fluid" alt="children" />
+            <img src="/images/children.svg" class="img-fluid" alt="children" />
         </div>
     </div>
 </section>
@@ -101,7 +101,7 @@
 <section class="container py-5">
     <div class="row">
         <div class="col-md-6">
-            <img src="./images/help_student.svg" alt="help student" class="img-fluid" />
+            <img src="/images/help_student.svg" alt="help student" class="img-fluid" />
         </div>
         <div class="col-md-6 d-flex justify-content-center align-items-center">
             <div class="helping__content">
@@ -115,7 +115,7 @@
                     Protection Programme.
                 </p>
 
-                <a href="/registration" class="btn donate-btn connect-btn">Connect with us</a>
+                <a href="/auth/vol/registration" class="btn donate-btn connect-btn">Connect with us</a>
             </div>
         </div>
     </div>
@@ -127,7 +127,7 @@
         <div class="col-md-4">
             <div class="box active">
                 <div class="box-icon">
-                    <img src="./images/heart.png" class="img-fluid box-img" alt="send donation" />
+                    <img src="/images/heart.png" class="img-fluid box-img" alt="send donation" />
                 </div>
                 <div class="box-details pt-3">
                     <h3 class="box-title">Send Donation</h3>
@@ -166,7 +166,7 @@
                         organization and the volunteer
                     </p>
                 </div>
-                <a href="/volunteer/signup" class="btn donate-btn">Become volunteer</a>
+                <a href="/auth/vol/registration" class="btn donate-btn">Become volunteer</a>
             </div>
         </div>
     </div>
@@ -190,7 +190,7 @@
                     <div class="swiper-wrapper">
                         <div class="swiper-slide">
                             <div class="top d-flex justify-content-center align-items-center">
-                                <img src="./images/activities/Blog-Topic-Ideas.jpg" alt="Manthan"
+                                <img src="/images/activities/Blog-Topic-Ideas.jpg" alt="Manthan"
                                     class="swiper-slide__img img-fluid" />
                                 <h3 class="program-name pl-3">Manthan</h3>
                             </div>
@@ -205,7 +205,7 @@
                         </div>
                         <div class="swiper-slide">
                             <div class="top d-flex justify-content-center align-items-center">
-                                <img src="./images/activities/constitution-day.png" alt="eGurukul Constitution english"
+                                <img src="/images/activities/constitution-day.png" alt="eGurukul Constitution english"
                                     class="swiper-slide__img img-fluid" />
                                 <h3 class="program-name pl-3">
                                     eGurukul's English
@@ -223,7 +223,7 @@
                         </div>
                         <div class="swiper-slide">
                             <div class="top d-flex justify-content-center align-items-center">
-                                <img src="./images/activities/human_right.jpg" alt="Manthan"
+                                <img src="/images/activities/human_right.jpg" alt="Manthan"
                                     class="swiper-slide__img img-fluid" />
                                 <h3 class="program-name pl-3">Human rights Act</h3>
                             </div>
@@ -238,7 +238,7 @@
                         </div>
                         <div class="swiper-slide">
                             <div class="top d-flex justify-content-center align-items-center">
-                                <img src="./images/activities/Advocacy.jpg" alt="Manthan"
+                                <img src="/images/activities/Advocacy.jpg" alt="Manthan"
                                     class="swiper-slide__img img-fluid" />
                                 <h3 class="program-name pl-3">Advocacy</h3>
                             </div>
@@ -256,7 +256,7 @@
 
                 <div class="view-all pt-3">
                     <div class="float-right mr-5">
-                        <a href="#" role="button" class="btn swiper-slide__claim">View all <i
+                        <a href="/activites" role="button" class="btn swiper-slide__claim">View all <i
                                 class="fas fa-chevron-right ml-3"></i></a>
                     </div>
                 </div>
@@ -271,6 +271,17 @@
 </section>
 <!-- program Section End -->
 
+<!-- Donate Section -->
+<section class="dontate-sec">
+    <div class="container">
+        <div class="row">
+            <div class="col-12 m-auto text-center">
+                <a href="/donate" class="btn donate-btn ">Donate</a>
+            </div>
+        </div>
+    </div>
+</section>
+
 <!-- Stories Section Start -->
 <div class="container">
     <div class="row">
@@ -282,7 +293,7 @@
                         <img src="./images/success/Header-Schoolboy.jpg" alt="success one" class="img-fluid" />
                     </div>
                     <div class="stories-details h-100 d-flex align-items-center px-4">
-                        <a href="/">
+                        <a href="/stories">
                             <p class="lead">
                                 With your precious donation, total 10 students are studying
                                 now and they are from XYZ.
@@ -291,14 +302,14 @@
                     </div>
                 </div>
                 <div class="two d-flex justify-content-center align-items-center">
-                    <a href="/">
+                    <a href="/stories">
                         <p class="lead">
                             Social awareness with our Child
                         </p>
                     </a>
                 </div>
                 <div class="three d-flex justify-content-center align-items-center">
-                    <a href="/">
+                    <a href="/stories">
                         <p class="lead">
                             Environement activites
                         </p>
@@ -312,14 +323,3 @@
     </div>
 </div>
 <!-- Stories Section End -->
-
-<!-- Donate Section -->
-<section class="dontate-sec">
-    <div class="container">
-        <div class="row">
-            <div class="col-12 m-auto text-center">
-                <a href="/donate" class="btn donate-btn ">Donate</a>
-            </div>
-        </div>
-    </div>
-</section>
