add html data to donate hbs

--- a/public/css/donate.css
+++ b/public/css/donate.css
@@ -1,13 +1,7 @@
-@import url("https://fonts.googleapis.com/css?family=Ubuntu|Roboto+Slab&display=swap");
-
-*,
-:before,
-:after {
-  box-sizing: border-box;
-}
-ody {
-  font-family: "Roboto Slab", serif;
-  font-size: 8px;
+.donate-container {
+  background: radial-gradient(rgba(0, 0, 0, 0.3), rgba(0, 0, 0, 0.3)),
+    url("../images/banner-1.jpg") no-repeat center center / cover;
+  background-attachment: fixed;
 }
 
 .form-body {
@@ -117,8 +111,7 @@ datalist option {
   left: 0%;
 }
 
-.btn {
-  background: #fff;
+.btn.btn-submit {
   color: #000;
   border: none;
   padding: 0.8rem 3rem;
@@ -130,12 +123,6 @@ datalist option {
   box-shadow: 0 1px 3px rgba(236, 110, 173, 0.562),
     0 1px 2px rgba(236, 110, 173, 0.575);
   transition: all 0.3s cubic-bezier(0.25, 0.8, 0.25, 1);
-}
-.btn:hover {
-  color: #8b8b8b;
-  box-shadow: 0 7px 14px rgba(0, 0, 0, 0.18), 0 5px 5px rgba(0, 0, 0, 0.12);
-}
-.btn.btn-submit {
   background: #6b0073;
   background: -webkit-linear-gradient(to right bottom, #ec6ead, #6b0073);
   background: linear-gradient(
@@ -160,6 +147,7 @@ datalist option {
   ); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
 
   color: #deeffd;
+  box-shadow: 0 7px 14px rgba(0, 0, 0, 0.18), 0 5px 5px rgba(0, 0, 0, 0.12);
 }
 .btn-box {
   text-align: center;
@@ -181,4 +169,8 @@ datalist option {
 .inline-input:focus ~ .bar:before {
   width: 85%;
   min-width: 85%;
+}
+
+.radio .custom-control-label {
+  font-size: 1rem;
 }
