--- a/views/templates/layout.hbs
+++ b/views/templates/layout.hbs
@@ -10,7 +10,7 @@
         {{!-- fontawesome --}}
         <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css" />
         {{!-- Title --}}
-        <title>eGurukul | Made for Students and Helped by you</title>
+        <title>{{title}}</title>
 
         {{!-- Bootstrap CSS --}}
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" />
