--- a/views/templates/donate.hbs
+++ b/views/templates/donate.hbs
@@ -1,1 +1,112 @@
-<h1>Hello Donate</h1>
+<div class="container-fluid donate-container">
+    <div class="col-md-7 m-auto">
+        <div class="form-wrapper">
+            <h2 class=" text-center ">
+                Donate Your Valuable <span class="pinks">Money</span>
+            </h2>
+            <form>
+                <div class="row">
+                    <div class="col-md-6">
+                        <div class="form-group position-relative my-4">
+                            <input type="string" class="input inline-input" name="activity_name" required="required" />
+
+                            <span class="highlight"></span>
+                            <span class="bar"></span>
+                            <label class="label">First name <sup class="text-danger">*</sup></label>
+                        </div>
+                    </div>
+                    <div class="col-md-6">
+                        <div class="form-group position-relative my-4">
+                            <input type="string" class="input inline-input" name="activity_link" required />
+                            <span class="highlight"></span>
+                            <span class="bar"></span>
+                            <label class="label">Last name <sup class="text-danger">*</sup></label>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="row">
+                    <div class="col-md-6">
+                        <div class="form-group position-relative my-4">
+                            <input type="string" class="input inline-input" required /><span
+                                class="highlight"></span><span class="bar"></span>
+                            <label class="label">Username <sup class="text-danger">*</sup></label>
+                        </div>
+                    </div>
+                    <div class="col-md-6">
+                        <div class="form-group position-relative my-4">
+                            <input type="string" class="input inline-input" required /><span
+                                class="highlight"></span><span class="bar"></span>
+                            <label class="label">E-mail<sup class="text-danger">*</sup></label>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="row">
+                    <div class="col-md-3">
+                        <div class="form-group position-relative my-4">
+                            <input type="string" class="input inline-input" required /><span
+                                class="highlight"></span><span class="bar"></span>
+                            <label class="label">Country<sup class="text-danger">*</sup></label>
+                        </div>
+                    </div>
+                    <div class="col-md-3">
+                        <div class="form-group position-relative my-4">
+                            <input type="string" class="input inline-input" required /><span
+                                class="highlight"></span><span class="bar"></span>
+                            <label class="label">State<sup class="text-danger">*</sup></label>
+                        </div>
+                    </div>
+                    <div class="col-md-3">
+                        <div class="form-group position-relative my-4">
+                            <input type="numeric" class="input inline-input" required /><span
+                                class="highlight"></span><span class="bar"></span>
+                            <label class="label">Zip<sup class="text-danger">*</sup></label>
+                        </div>
+                    </div>
+                </div>
+
+                <h4 class="mb-3">Payment</h4>
+
+                <div class="radio my-3">
+                    <div class="custom-control custom-radio">
+                        <input id="credit" name="paymentMethod" type="radio" class="custom-control-input" checked
+                            required />
+                        <label class="custom-control-label" for="credit">Credit card</label>
+                    </div>
+                    <div class="custom-control custom-radio">
+                        <input id="debit" name="paymentMethod" type="radio" class="custom-control-input" required />
+                        <label class="custom-control-label" for="debit">Debit card</label>
+                    </div>
+                    <div class="custom-control custom-radio">
+                        <input id="paypal" name="paymentMethod" type="radio" class="custom-control-input" required />
+                        <label class="custom-control-label" for="paypal">PayPal</label>
+                    </div>
+                </div>
+
+                <div class="row">
+                    <div class="col-md-6">
+                        <div class="form-group position-relative my-4">
+                            <input type="string" class="input inline-input" required /><span
+                                class="highlight"></span><span class="bar"></span>
+                            <label class="label">Name on card<sup class="text-danger">*</sup></label>
+                        </div>
+                    </div>
+                    <div class="col-md-6">
+                        <div class="form-group position-relative my-4">
+                            <input type="string" class="input inline-input" required /><span
+                                class="highlight"></span><span class="bar"></span>
+                            <label class="label">Credit card number<sup class="text-danger">*</sup></label>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="btn-box">
+                    <button class="btn btn-submit " type="submit">
+                        pay now
+                    </button>
+                </div>
+            </form>
+        </div>
+    </div>
+</div>
