--- a/views/templates/home.hbs
+++ b/views/templates/home.hbs
@@ -41,7 +41,7 @@
                             <p class="last-item__text">
                                 Why the Gap ?
                             </p>
-                            <a href="/auth/vol/resgitration" class="btn join-us">Join with us</a>
+                            <a href="/auth/vol/registration" class="btn join-us">Join with us</a>
                         </div>
                     </div>
                 </div>
