create input partials
and use it to donate page

--- a/views/partials/inputs.hbs
+++ b/views/partials/inputs.hbs
@@ -1,5 +1,7 @@
-<div class="form-group">
-    <label for="{{ for }}">Your name</label>
-    <input type="{{ type }}" class="form-control" id="{{ for }}" required
-        aria-required="true">
+<div class="form-group position-relative my-4">
+    <input type="{{type}}" class="input inline-input" name="{{name}}" />
+
+    <span class="highlight"></span>
+    <span class="bar"></span>
+    <label class="label">{{ label }}</label>
 </div>
