fix some css issue

--- a/public/css/users_login.css
+++ b/public/css/users_login.css
@@ -202,5 +202,6 @@ datalist option {
 [type="date"]::-webkit-calendar-picker-indicator {
   opacity: 0;
 }
-
-@import url("https://fonts.googleapis.com/css?family=Ubuntu|Roboto+Slab&display=swap");
+.main-wrapper {
+  height: 100%;
+}
