--- a/views/templates/layout.hbs
+++ b/views/templates/layout.hbs
@@ -88,7 +88,7 @@
     </nav>
     {{!-- Header End --}}
 
-    <div class="main-wrapper h-100">
+    <div class="main-wrapper">
         {{{body}}}
     </div>
 
