--- a/views/templates/userlogin.hbs
+++ b/views/templates/userlogin.hbs
@@ -14,7 +14,7 @@
                         </p>
 
                         <div class="btn-box">
-                            <a class="btn btn-submit" href="/auth/user/registration">Sign Up</a>
+                            <a class="btn btn-submit" href="/user/registration">Sign Up</a>
                         </div>
                     </div>
 
