add volunteer registration page

--- a/views/templates/layout.hbs
+++ b/views/templates/layout.hbs
@@ -72,7 +72,7 @@
                             </button>
                             <div class="dropdown-menu" aria-labelledby="userDropDown">
                                 <a class="dropdown-item" href="/vol/login">Log In</a>
-                                <a class="dropdown-item" href="/vol/login">Registration</a>
+                                <a class="dropdown-item" href="/vol/registration">Registration</a>
                             </div>
                         </div>
                     </li>
