--- a/public/css/volunteer.css
+++ b/public/css/volunteer.css
@@ -1,21 +1,11 @@
-@import url("https://fonts.googleapis.com/css?family=Ubuntu|Roboto+Slab&display=swap");
-
-*,
-:before,
-:after {
-  box-sizing: border-box;
-}
-
-body {
-  font-family: "Roboto Slab", serif;
-  font-size: 8px;
-}
-
 .form-body {
   background: rgb(255, 255, 255);
   background-color: #fc9d9a;
   background: url("../images/trianglify-lowres.png") center center / cover;
   background-attachment: fixed;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 .mb-2r {
   margin-bottom: 3.1rem !important;
@@ -151,24 +141,6 @@ datalist option {
   left: 0%;
 }
 
-.btn {
-  background: #fff;
-  color: #000;
-  border: none;
-  padding: 0.8rem 3rem;
-  border-radius: 2rem;
-  letter-spacing: 0.06em;
-  text-transform: uppercase;
-  text-decoration: none;
-  outline: none;
-  box-shadow: 0 1px 3px rgba(236, 110, 173, 0.562),
-    0 1px 2px rgba(236, 110, 173, 0.575);
-  transition: all 0.3s cubic-bezier(0.25, 0.8, 0.25, 1);
-}
-.btn:hover {
-  color: #8b8b8b;
-  box-shadow: 0 7px 14px rgba(0, 0, 0, 0.18), 0 5px 5px rgba(0, 0, 0, 0.12);
-}
 .btn.btn-submit {
   background: #6b0073;
   background: -webkit-linear-gradient(to right bottom, #ec6ead, #6b0073);
@@ -179,6 +151,16 @@ datalist option {
   ); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
 
   color: #fff;
+  border: none;
+  padding: 0.8rem 3rem;
+  border-radius: 2rem;
+  letter-spacing: 0.06em;
+  text-transform: uppercase;
+  text-decoration: none;
+  outline: none;
+  box-shadow: 0 1px 3px rgba(236, 110, 173, 0.562),
+    0 1px 2px rgba(236, 110, 173, 0.575);
+  transition: all 0.3s cubic-bezier(0.25, 0.8, 0.25, 1);
 }
 .btn.btn-submit:hover {
   background: #6b0073;
@@ -194,6 +176,7 @@ datalist option {
   ); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
 
   color: #deeffd;
+  box-shadow: 0 7px 14px rgba(0, 0, 0, 0.18), 0 5px 5px rgba(0, 0, 0, 0.12);
 }
 .btn-box {
   text-align: center;
