login and registration for volunteer

--- a/views/templates/volreg.hbs
+++ b/views/templates/volreg.hbs
@@ -51,7 +51,7 @@
                                 </div>
                             </div>
                             <div class="col-md-6">
-                                {{> requiredInput type="text" name="number" className="input inline-input" label="Number"}}
+                                {{> inputs type="text" name="number" className="input inline-input" label="Number"}}
                             </div>
                         </div>
                         <div class="row">
@@ -94,10 +94,10 @@
                         <div class="row">
                             <div class="col-12">
                                 <div class="form-group position-relative my-4">
-                                    <textarea type="textarea" class="textarea" rows="3" required></textarea><span
+                                    <textarea type="textarea" class="textarea" rows="3"></textarea><span
                                         class="highlight"></span><span class="bar"></span>
                                     <label class="label">Previous experience
-                                        <sup class="text-danger">*</sup></label>
+                                    </label>
                                 </div>
                             </div>
                         </div>
