fix input animation when input has value

--- a/views/templates/volreg.hbs
+++ b/views/templates/volreg.hbs
@@ -94,7 +94,7 @@
                         <div class="row">
                             <div class="col-12">
                                 <div class="form-group position-relative my-4">
-                                    <textarea type="textarea" class="textarea" rows="3"></textarea><span
+                                    <textarea type="textarea" class="textarea anim" rows="3"></textarea><span
                                         class="highlight"></span><span class="bar"></span>
                                     <label class="label">Previous experience
                                     </label>
